fixed horizontal scrolling

--- a/main/assets/css/pages/_index.scss
+++ b/main/assets/css/pages/_index.scss
@@ -27,9 +27,6 @@
   }
 }
 
-
-
-
 .hero {
   .aspect-ratio {
     --aspect-ratio: 1;
@@ -100,7 +97,7 @@
 .courses {
   .cards {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(17rem, 1fr));
     gap: var(--space-lg);
   }
   .card {
